--- a/about.css
+++ b/about.css
@@ -80,7 +80,7 @@
 
 
 .bg-img {
-    background-image: url(img/bg2.jpg);
+    background-image: url(card/p4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
